--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <polaris-chip title="Sports are the only thing that matter"></polaris-chip>
   <polaris-chip title="Grants and donations"></polaris-chip>
 
-  <h1>my-card</h1>
+  <h1>Pokemon-card</h1>
   <my-card></my-card>
   <my-card 
   name="Pikachu" 
@@ -59,7 +59,7 @@
   name="Mew" 
   move1="Psywave" 
   move2="Clairvoyance" 
-  moveDamage1="20"
+  moveDamage1="60"
   moveDamage2="" 
   image="https://i.pinimg.com/736x/1a/f5/6a/1af56adcdbdf561aa72c731b7b8e4b13.jpg"></my-card>
 
